browser/css/jsdialogs.css
/* ... */
/* Calc - Format - Format Cells - Background - Color */
/* Format -> Character -> Font Effects -> Font color */

#ColorPage.jsdialog :is(#iconview_colors, #iconview_recent_colors).ui-iconview,
:is(#colorwindow_iv_colors, #colorwindow_iv_recentcolors).ui-iconview {
	grid-template-columns: repeat(12, 1fr);
	width: max-content;
	line-height: 0;
	padding: 5px;
}

#ColorPage.jsdialog #iconview_colors.ui-iconview,
#colorwindow_iv_colors.ui-iconview {
	max-height: 19vh;
}

#ColorPage.jsdialog
	:is(#iconview_colors, #iconview_recent_colors).ui-iconview
	.ui-iconview-entry
	img,
:is(#colorwindow_iv_colors, #colorwindow_iv_recentcolors)
	.ui-iconview-entry
	img {
	padding: 1px;
}

#ColorPage.jsdialog
	:is(#iconview_colors, #iconview_recent_colors).ui-iconview
	.ui-iconview-entry:is(:hover, .selected),
:is(#colorwindow_iv_colors, #colorwindow_iv_recentcolors)
	.ui-iconview-entry:is(:hover, .selected) {
	outline: 2px solid var(--color-primary);
	border: 1px solid transparent;
	background-color: transparent;
	border-radius: 0;
}

#ColorPage.jsdialog
	:is(#iconview_colors, #iconview_recent_colors).ui-iconview
	.ui-iconview-entry
	span,
:is(#colorwindow_iv_colors, #colorwindow_iv_recentcolors)
	.ui-iconview-entry
	span {
	font-size: 0; /* Hide placeholder text to prevent layout shifts in color palette iconview widgets due to lazy loading */
}

/* Writer - Format - Character */
/* Writer - Format - Paragraph */
/* Writer - Format - Page Style */

#ParagraphPropertiesDialog #ParaIndentSpacing #maingrid,
#ParagraphPropertiesDialog #labelTP_NUMPARA #NumParaPage,
#ParagraphPropertiesDialog #labelTP_DROPCAPS #maingrid52,
#ParagraphPropertiesDialog #transparence #box1,
#CharacterPropertiesDialog #fonteffects #FontColor,
#CharacterPropertiesDialog #fonteffects #TextDecoration,
#CharacterPropertiesDialog #fonteffects #Effects,
[id^='TemplateDialog'] #Footnote #FootnoteAreaPage {
	width: fit-content;
}

[id^='TemplateDialog'] #Footnote #FootnoteAreaPage .menubutton {
	margin: 0;
}

#CharacterPropertiesDialog
	:is(#font, #fonteffects, #position, #asianlayout)
	img.jsdialog.ui-drawing-area {
	width: 650px;
}

#CharacterPropertiesDialog #position #box7,
#CharacterPropertiesDialog #FontColor #grid3 {
	align-items: center;
}

/* Writer - Format - Paragraph - Text Flow */
/* Writer - Format - Paragraph - Tabs */
#ParagraphPropertiesDialog #textflow #checkAcrossPage.checkbutton,
#ParagraphPropertiesDialog #labelTP_TABULATOR #ParagraphTabsPage {
	grid-column-gap: 0;
}

/* Writer - Format - Paragraph - Tabs */
/* Writer - Format - Paragraph - Area - Color */
#ParagraphPropertiesDialog #labelTP_TABULATOR #entryED_TABTYPE_DECCHAR-input,
#ParagraphPropertiesDialog #labelTP_TABULATOR #entryED_FILLCHAR_OTHER-input,
#ColorPage.jsdialog #rgbpreset input,
#ColorPage.jsdialog #rgbcustom input {
	max-width: 100px;
}

/* Writer - Format - Paragraph - Area - Color */
#ColorPage.jsdialog #rgbpreset {
	width: max-content;
}

/* Writer - Format - Page Style - Columns - Settings */

#ColumnPage.jsdialog #grid4 {
	align-items: center;
}

#ColumnPage.jsdialog #column-iconview.ui-iconview {
	grid-template-columns: repeat(5, 1fr);
	overflow: visible;
}

/* Format - Bullets and Numbering */

#BulletsAndNumberingDialog
	:is(
		#pick_bullet_iconview,
		#pick_numbering_iconview,
		#pick_outline_iconview,
		#pick_graphic_iconview
	).jsdialog.ui-iconview {
	grid-template-columns: repeat(4, 1fr);
}

#BulletsAndNumberingDialog
	#PickBulletPage
	#changeBulletBtn.jsdialog.ui-grid-cell {
	justify-content: flex-end;
}

#BulletsAndNumberingDialog #pick_graphic_iconview.jsdialog.ui-iconview {
	min-width: 650px;
}

#BulletsAndNumberingDialog
	#PickGraphicPage.jsdialog
	#pick_graphic_iconview.ui-iconview
	.ui-iconview-entry
	span {
	font-size: 0; /* Hide placeholder text to prevent layout shifts in image page of bullets and numbering dialog due to lazy loading */
}

#BulletsAndNumberingDialog
	#NumberingPositionPage
	#previewwin.jsdialog
	img.jsdialog.ui-drawing-area {
	width: 370px;
}

/* Format - Bullets and Numbering - Select image as bullet -> Go to Customize */
#BulletsAndNumberingDialog #customize #bitmap-button.unobutton {
	width: fit-content; /* makes button text visible*/
}

/* Insert - Line - Sidebar - Line Style */
/* Insert - Line - Sidebar - Thickness */
#floating_line_style_iconview.ui-iconview.jsdialog,
#line_iconview.ui-iconview.jsdialog {
	grid-template-columns: 1fr; /* we want line style in a single column */
}

/* Insert - Line - Sidebar - Arrow Styles */
#floating_line_end_iconview.ui-iconview.jsdialog {
	grid-template-columns: 1fr 1fr;
}

/* Insert - Line - Sidebar - Line Style */
/* Insert - Line - Sidebar - Arrow Styles */
#floating_line_style_iconview.ui-iconview.jsdialog,
#floating_line_end_iconview.ui-iconview.jsdialog {
	font-size: 0; /* Hide placeholder text to prevent layout shifts due to lazy loading */
}

:is(#floating_line_style_iconview, #floating_line_end_iconview, #line_iconview).ui-iconview .ui-iconview-entry {
	border: 1px solid transparent !important; /* Prevents layout shift by reserving space for the border on hover */
}

/* Select Chart - Sidebar - Edit Object - Colors */
:is(#colorful_palettes, #monochromatic_palettes) .ui-iconview-entry {
	border: 1px solid transparent;
}

/* Calc - Insert - Chart - Chart Wizard(Data series) */

#CHART2_HID_SCH_WIZARD_ROADMAP #tp_DataSource #box1.jsdialog.ui-grid-cell {
	align-items: start;
}

#CHART2_HID_SCH_WIZARD_ROADMAP #tp_DataSource #grid2 :is(#box5, #box6) {
	align-items: center;
}

/* Calc - Insert - Chart - Chart Wizard */
#subtype_iconview.jsdialog.ui-iconview {
	grid-template-columns: repeat(4, 1fr);
	overflow: visible;
}

#CHART2_HID_SCH_WIZARD_ROADMAP.vertical.jsdialog label {
	width: max-content;
}

/* Listbox UI grid */
.jsdialog.ui-grid[role='listbox'] {
	max-height: 470px;
	overflow-x: hidden;
	overflow-y: auto;
}

/* Writer - Form - Properties(Dropdown) */
#ContentControlDialog #tabindexlabel {
	width: max-content;
}
/* ... */

